updated all templates

--- a/redis-template/templates/redis-configmap.yaml
+++ b/redis-template/templates/redis-configmap.yaml
@@ -2,13 +2,18 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "redis-template.configmapName" . }}
+  name: {{ .Values.redis.configMapName }}
   labels:
     app: {{ .Values.redis.name }}
 data:
   redis.conf: |
+    bind {{ .Values.redis.config.bind | default "0.0.0.0" }}
+    port {{ .Values.redis.port }}
     maxmemory {{ .Values.redis.config.maxmemory }}
     maxmemory-policy {{ .Values.redis.config.policy }}
+    {{- if .Values.redis.auth.enabled }}
+    requirepass {{ .Values.redis.auth.password }}
+    {{- end }}
     {{- if .Values.redis.persistence.enabled }}
     appendonly yes
     {{- end }}
