--- a/redis-template/templates/redis-secret.yaml
+++ b/redis-template/templates/redis-secret.yaml
@@ -3,11 +3,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "redis-template.secretName" . }}
+  name: {{ .Values.redis.auth.secretName }}
   labels:
     app: {{ .Values.redis.name }}
 type: Opaque
-stringData:
-  REDIS_PASSWORD: "{{ .Values.redis.auth.password }}"
+data:
+  REDIS_PASSWORD: {{ .Values.redis.auth.password | b64enc }}
 {{- end }}
 {{- end }}
