--- a/redis-template/templates/redis-service.yaml
+++ b/redis-template/templates/redis-service.yaml
@@ -2,15 +2,24 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "redis-template.fullname" . }}
+  name: {{ .Values.redis.service.name }}
   labels:
     app: {{ .Values.redis.name }}
 spec:
+  {{- if .Values.redis.service.headless }}
   clusterIP: None
+  {{- else }}
+  type: {{ .Values.redis.service.type | default "ClusterIP" }}
+  {{- end }}
   selector:
     app: {{ .Values.redis.name }}
   ports:
-    - name: redis
-      port: {{ .Values.redis.port }}
-      targetPort: {{ .Values.redis.port }}
+    {{- range .Values.redis.service.ports }}
+    - name: {{ .name }}
+      port: {{ .port }}
+      targetPort: {{ .targetPort | default .port }}
+      {{- if .nodePort }}
+      nodePort: {{ .nodePort }}
+      {{- end }}
+    {{- end }}
 {{- end }}
