--- a/redis-template/templates/redis-secret.yaml
+++ b/redis-template/templates/redis-secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.redis.auth.secretName }}
+  name: {{ .Values.redis.auth.secret.name }}
   labels:
     app: {{ .Values.redis.name }}
 type: Opaque
