--- a/redis-template/templates/redis-configmap.yaml
+++ b/redis-template/templates/redis-configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.redis.configMapName }}
+  name: {{ .Values.redis.configMap.name }}
   labels:
     app: {{ .Values.redis.name }}
 data:
