--- a/redis-template/templates/redis-secret.yaml
+++ b/redis-template/templates/redis-secret.yaml
@@ -8,6 +8,6 @@ metadata:
     app: {{ .Values.redis.name }}
 type: Opaque
 data:
-  REDIS_PASSWORD: {{ .Values.redis.auth.password | b64enc }}
+  REDIS_PASSWORD: {{ .Values.redis.auth.secret.password | b64enc }}
 {{- end }}
 {{- end }}
