--- a/redis-template/Chart.yaml
+++ b/redis-template/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: redis-template
-version: 1.1.1
 description: A reusable Redis Helm custom chart for caching
-# type: library
+version: 1.1.1
+type: application
