--- a/redis-template/values.yaml
+++ b/redis-template/values.yaml
@@ -1,81 +1,64 @@
-redis:
-  name: redis
-  replicas: 1
+redis-backend:
+  redis:
+    name: redis-backend
+    replicas: 1
 
-  image:
-    repository: redis
-    tag: "7.2.4"
-    pullPolicy: IfNotPresent
+    image:
+      repository: redis
+      tag: "7.2.4"
+      pullPolicy: IfNotPresent
 
-  port: 6379
+    port: 6379
 
-  serviceName: redis-service
-  configMapName: redis-config
-  secretName: redis-secret
-  pvcName: redis-data-pvc
+    terminationGracePeriodSeconds: 10
+    updateStrategy: RollingUpdate
 
-  terminationGracePeriodSeconds: 10
+    service:
+      name: redis-backend-service
+      type: ClusterIP
+      headless: false
+      ports:
+        - name: redis
+          port: 6379
+          targetPort: 6379
 
-  updateStrategy: RollingUpdate
+    configMap:
+      name: redis-backend-config
 
-  # Pod-level securityContext
-  securityContext:
-    runAsUser: 1000
-    runAsGroup: 1000
-    fsGroup: 1000
+    auth:
+      enabled: true
+      secret:
+        name: redis-backend-secret
+        password: "supersecurepassword"
 
-  # Container-level securityContext
-  containerSecurityContext:
-    readOnlyRootFilesystem: false
-    allowPrivilegeEscalation: false
-    capabilities:
-      drop:
-        - ALL
+    config:
+      bind: "0.0.0.0"
+      maxmemory: "256mb"
+      policy: "allkeys-lru"
 
-  # Probes
-  livenessProbe:
-    initialDelaySeconds: 10
-    periodSeconds: 5
-  readinessProbe:
-    initialDelaySeconds: 5
-    periodSeconds: 5
+    securityContext:
+      runAsUser: 1000
+      runAsGroup: 1000
+      fsGroup: 1000
 
-  # Auth configuration
-  auth:
-    enabled: true
-    password: "supersecurepassword"
-    secretName: redis-secret
+    containerSecurityContext:
+      readOnlyRootFilesystem: false
+      allowPrivilegeEscalation: false
+      capabilities:
+        drop:
+          - ALL
 
-  # Redis server config (used in redis.conf)
-  config:
-    bind: "0.0.0.0"
-    maxmemory: "256mb"
-    policy: "allkeys-lru"  # options: noeviction, allkeys-lru, allkeys-random, volatile-lru, volatile-random, volatile-ttl
+    persistence:
+      enabled: true
+      size: 1Gi
+      accessModes:
+        - ReadWriteOnce
+      storageClassName: ""
 
-  # Service settings
-  service:
-    name: redis-service
-    type: ClusterIP   # or NodePort / LoadBalancer
-    headless: false
-    ports:
-      - name: redis
-        port: 6379
-        targetPort: 6379
-        # nodePort: 30079 # Optional if using NodePort
-
-  # Resources
-  resources:
-    limits:
-      cpu: "500m"
-      memory: "512Mi"
-    requests:
-      cpu: "100m"
-      memory: "256Mi"
-
-  # Persistence
-  persistence:
-    enabled: true
-    size: 1Gi
-    accessModes:
-      - ReadWriteOnce
-    storageClassName: "" # leave blank for default SC or specify like "fast", "gp2"
+    resources:
+      limits:
+        cpu: "500m"
+        memory: "512Mi"
+      requests:
+        cpu: "100m"
+        memory: "256Mi"
