--- a/redis-template/values.yaml
+++ b/redis-template/values.yaml
@@ -1,64 +1,30 @@
-redis-backend:
-  redis:
-    name: redis-backend
-    replicas: 1
+redis:
+  image:
+    repository: redis
+    tag: 6.2.6
+    pullPolicy: IfNotPresent
 
-    image:
-      repository: redis
-      tag: "7.2.4"
-      pullPolicy: IfNotPresent
+  password: devredis123
 
+  service:
+    type: ClusterIP
     port: 6379
 
-    terminationGracePeriodSeconds: 10
-    updateStrategy: RollingUpdate
+  persistence:
+    enabled: true
+    size: 1Gi
+    storageClass: "standard"
 
-    service:
-      name: redis-backend-service
-      type: ClusterIP
-      headless: false
-      ports:
-        - name: redis
-          port: 6379
-          targetPort: 6379
+  configInline: |
+    maxmemory 2mb
+    maxmemory-policy allkeys-lru
+    appendonly yes
+    save 60 1000
 
-    configMap:
-      name: redis-backend-config
-
-    auth:
-      enabled: true
-      secret:
-        name: redis-backend-secret
-        password: "supersecurepassword"
-
-    config:
-      bind: "0.0.0.0"
-      maxmemory: "256mb"
-      policy: "allkeys-lru"
-
-    securityContext:
-      runAsUser: 1000
-      runAsGroup: 1000
-      fsGroup: 1000
-
-    containerSecurityContext:
-      readOnlyRootFilesystem: false
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop:
-          - ALL
-
-    persistence:
-      enabled: true
-      size: 1Gi
-      accessModes:
-        - ReadWriteOnce
-      storageClassName: ""
-
-    resources:
-      limits:
-        cpu: "500m"
-        memory: "512Mi"
-      requests:
-        cpu: "100m"
-        memory: "256Mi"
+  resources:
+    requests:
+      memory: "128Mi"
+      cpu: "100m"
+    limits:
+      memory: "512Mi"
+      cpu: "500m"
