--- a/redis-template/Chart.yaml
+++ b/redis-template/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: redis
+name: redis-template
 description: A Helm chart for Redis
 type: application
 version: 0.1.0
-appVersion: "6.2.6"
+appVersion: "7.4.1"
