--- a/redis-template/templates-main/configmap.yaml
+++ b/redis-template/templates-main/configmap.yaml
@@ -1,10 +1,8 @@
-{{- define "redis-template.configmap" -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "redis-template.fullname" . }}-config
+  name: {{ .Release.Name }}-redis-config
   namespace: {{ .Release.Namespace }}
 data:
   redis.conf: |
 {{ .Values.redis.configInline | indent 4 }}
-{{- end }}
