--- a/redis-template/templates-main/secret.yaml
+++ b/redis-template/templates-main/secret.yaml
@@ -1,10 +1,8 @@
-{{- define "redis-template.secret" -}}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "redis-template.fullname" . }}-secret
+  name: {{ .Release.Name }}-redis-secret
   namespace: {{ .Release.Namespace }}
 type: Opaque
 data:
   redis-password: {{ .Values.redis.password | b64enc | quote }}
-{{- end }}
