--- a/redis-template/templates-main/service.yaml
+++ b/redis-template/templates-main/service.yaml
@@ -1,8 +1,7 @@
-{{- define "redis-template.service" -}}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "redis-template.fullname" . }}
+  name: {{ .Release.Name }}-redis
   namespace: {{ .Release.Namespace }}
 spec:
   type: {{ .Values.redis.service.type }}
@@ -11,5 +10,4 @@ spec:
       targetPort: 6379
       name: redis
   selector:
-    app: {{ include "redis-template.fullname" . }}
-{{- end }}
+    app: {{ .Release.Name }}-redis
