--- a/redis-template/templates-main/statefulset.yaml
+++ b/redis-template/templates-main/statefulset.yaml
@@ -35,6 +35,7 @@ spec:
             - name: redis-config
               mountPath: /etc/redis/redis.conf
               subPath: redis.conf
+              readOnly: true
           livenessProbe:
             exec:
               command: ["sh", "-c", "redis-cli -a $REDIS_PASSWORD ping || exit 1"]
@@ -58,8 +59,8 @@ spec:
               cpu: {{ .Values.redis.resources.limits.cpu | quote }}
       volumes:
         - name: redis-config
-          configMap:
-            name: {{ .Release.Name }}-redis-config
+          secret:
+            secretName: {{ .Release.Name }}-redis-config-secret
         {{- if not .Values.redis.persistence.enabled }}
         - name: redis-data
           emptyDir: {}
